@@ -1,0 +1,9 @@
+config DS_PACKAGE_CPMACCFG
+	bool "cpmaccfg"
+	depends on DS_REPLACE_KERNEL
+	default n
+	help
+	    With a patched kernel and this tool it is possible to
+	    configure the ADM6996L switch (at least FB 7170, maybe
+	    other FBs with 4 LAN ports work too) to support VLANs
+	    and/or to split the LAN ports into different subnets.
