@@ -1,3 +1,5 @@
+revision 12:
+- added cpmaccfg-package
 revision 11:
 - added shadow000's webinterface mod (orangebox)
 revision 10:
